--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>제안 및 가견적서-Contents Technologies</title><link href="https://framerusercontent.com/images/4wvDPEd9KoNGvrNBYgKjf08GrE.png" rel="icon" media="(prefers-color-scheme: dark)"><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>제안 및 가견적서-Contents Technologies</title><link href="https://framerusercontent.com/images/4wvDPEd9KoNGvrNBYgKjf08GrE.png" rel="icon"><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
